<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorNavHeaderBack"
        android:id="@+id/view"/>

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:background="@xml/rounded_shape"
        android:padding="5dp"
        android:contentDescription="@string/profile_img_cd"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/avatar_bald"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/profileImage"
        android:maxLines="2"
        android:padding="5dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/profileImage"
        android:padding="5dp"
        android:text="@string/mail_addr"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_light_focused"/>

</RelativeLayout>