<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <!-- Layout real de la actividad -->
    <RelativeLayout
        android:id="@+id/activity_main_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_main_menu_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:title="@string/title_activity_mainmenu"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <!-- Waiting initial layout -->
        <LinearLayout
            android:id="@+id/amm_loading_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/activity_main_menu_toolbar"
            android:layout_centerVertical="true"
            android:gravity="center">

            <include layout="@layout/undefined_progress_layout"/>

        </LinearLayout>

        <!-- Layout for clients -->
        <LinearLayout
            android:id="@+id/amm_client_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/activity_main_menu_toolbar"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/amm_action_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="generateOrder"
                android:text="@string/organizar_una_recogida"/>

            <Button
                android:id="@+id/amm_action_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="showListOrders"
                android:text="@string/mostrar_estado_de_mis_env_os"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="chatWithUser"
                android:text="@string/chatear_con_trabajador"/>

        </LinearLayout>

        <!-- Layout for workers -->
        <LinearLayout
            android:id="@+id/amm_worker_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/activity_main_menu_toolbar"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/amm_action_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="nearOrders"
                android:text="@string/mostrar_trabajos_cercanos"/>

            <Button
                android:id="@+id/amm_action_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="showListOrders"
                android:text="@string/mostrar_estado_de_mis_trabajos"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="chatWithUser"
                android:text="@string/chatear_con_trabajador"/>

        </LinearLayout>

    </RelativeLayout>

    <!-- Layout del menú lateral (Navigation View) -->
    <android.support.design.widget.NavigationView
        android:id="@+id/activity_main_menu_sidebar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/colorNavBack"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme"
        app:headerLayout="@layout/navdrawer_header"
        app:menu="@menu/navdrawer_menu"/>

</android.support.v4.widget.DrawerLayout>

