<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.davidgod93.homepost.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ap_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ap_til_2"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/avatar_img_cd"
            app:srcCompat="@drawable/avatar_bald"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ap_til_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:padding="5dp">

            <EditText
                android:id="@+id/ap_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ap_til_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/ap_til_1"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:padding="5dp">

            <EditText
                android:id="@+id/ap_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnChangeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ap_til_2"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:onClick="changeImage"
            app:fabSize="normal"
            app:srcCompat="@android:drawable/ic_popup_sync"/>

    </RelativeLayout>

</RelativeLayout>