<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/ams_search_layout"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ams_search_btn"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:onClick="searchLocation"
            android:src="@drawable/ic_search_blue_36dp"
            android:contentDescription="@string/bot_n_de_b_squeda"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/ams_search"
            android:maxLines="1"
            android:lines="1"
            android:inputType="textCapSentences"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/ams_search_btn"
            android:hint="@string/direcci_n_de_b_squeda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <fragment
        android:id="@+id/ams_map"
        android:layout_below="@id/ams_search_layout"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.davidgod93.easytrans.MapSelectionActivity"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:clickable="true"
        android:onClick="setMarker"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_save"/>

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <LinearLayout android:id="@+id/ams_loading"
              android:background="#80ffffff"
              android:orientation="vertical"
              android:layout_weight="1"
              android:layout_width="0dp"
              android:layout_height="wrap_content">

            <com.comix.overwatch.HiveProgressView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:hive_animDuration="5000"
                app:hive_color="@color/colorPrimary"/>

            <TextView
                android:id="@+id/upl_progress_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/realizando_tareas"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

    </LinearLayout>

</RelativeLayout>
